# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.197 2015/05/17 09:18:45 hwoarang Exp $

*rb_libtorrent-1.0.5 (17 May 2015)

  17 May 2015; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-1.0.5.ebuild, -rb_libtorrent-1.0.3.ebuild:
  Version bump. Bug #549390

  05 May 2015; Jeroen Roovers <jer@gentoo.org> rb_libtorrent-0.16.17.ebuild:
  Stable for PPC64 (bug #522764).

*rb_libtorrent-1.0.4 (19 Apr 2015)

  19 Apr 2015; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-1.0.4.ebuild:
  Version bump

  12 Apr 2015; Justin Lecher <jlec@gentoo.org> -rb_libtorrent-0.16.17-r1.ebuild,
  -rb_libtorrent-1.0.2.ebuild, rb_libtorrent-0.16.17-r2.ebuild,
  rb_libtorrent-0.16.19.ebuild, rb_libtorrent-1.0.3.ebuild:
  Export best python version before configure, #545354

  28 Mar 2015; Justin Lecher <jlec@gentoo.org>
  files/rb_libtorrent-1.0.2-python.patch:
  Fix broken configure patch, #544612

  28 Mar 2015; Justin Lecher <jlec@gentoo.org>
  files/rb_libtorrent-0.16.17-python.patch:
  Fix broken configure patch, #544612

  23 Mar 2015; Justin Lecher <jlec@gentoo.org>
  +files/rb_libtorrent-0.16.17-python.patch,
  +files/rb_libtorrent-1.0.2-python.patch, metadata.xml,
  rb_libtorrent-0.16.17-r2.ebuild, rb_libtorrent-0.16.19.ebuild,
  rb_libtorrent-1.0.2.ebuild, rb_libtorrent-1.0.3.ebuild:
  Fix python stuff, bug #542434

*rb_libtorrent-0.16.19 (17 Mar 2015)

  17 Mar 2015; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.16.19.ebuild:
  Version bump. Bug #542196

  17 Mar 2015; Markos Chandras <hwoarang@gentoo.org>
  rb_libtorrent-0.16.17-r2.ebuild:
  Really fix the broken commit by Ian Delaney. Bug #539368 again

  11 Mar 2015; Ian Delaney <idella4@gentoo.org> rb_libtorrent-0.16.17-r2.ebuild:
  revert DEPEND RDEPEND to reflect the state in the -r1

*rb_libtorrent-0.16.17-r2.ebuild (05 Mar 2015)
